# SURF_2026

./: .gitignore  .gitmodules  README.md
surf_ws/: frames_2026-07-16_16.37.37.gv
surf_ws/src/surf_data_tracker/: README.md  package.xml  setup.cfg  setup.py
surf_ws/src/surf_data_tracker/data_collection/20260722T230848_285779Z_ed8fc242/: report.csv  report.md  summary.json  telemetry.sqlite3
surf_ws/src/surf_data_tracker/data_collection/20260722T233659_003465Z_79cf19ba/: report.csv  report.md  summary.json  telemetry.sqlite3
surf_ws/src/surf_data_tracker/data_collection/20260723T001533_946668Z_3a10227e/: report.csv  report.md  summary.json  telemetry.sqlite3
surf_ws/src/surf_data_tracker/data_collection/20260723T004429_700862Z_e8886046/: report.csv  report.md  summary.json  telemetry.sqlite3
surf_ws/src/surf_data_tracker/data_collection/20260723T005028_095622Z_29b131dd/: report.csv  report.md  summary.json  telemetry.sqlite3
surf_ws/src/surf_data_tracker/data_collection/20260723T212847_049421Z_e64eb4b9/: report.csv  report.md  summary.json  telemetry.sqlite3
surf_ws/src/surf_data_tracker/data_collection/20260723T215018_060575Z_ec22b293/: report.csv  report.md  summary.json  telemetry.sqlite3
surf_ws/src/surf_data_tracker/launch/: tracker.launch.py
surf_ws/src/surf_data_tracker/surf_data_tracker/: adaptive_mode_report.py  tracker.py
surf_ws/src/surf_drone/: CMakeLists.txt  package.xml
surf_ws/src/surf_drone/config/: drone.yaml
surf_ws/src/surf_drone/include/surf_drone/: adaptive_mode.hpp  voxel_codec.hpp
surf_ws/src/surf_drone/src/: adaptive_mode.cpp  drone_scan_sender.cpp  voxel_codec.cpp
surf_ws/src/surf_drone/test/: test_adaptive_mode.cpp  test_drone_communication.cpp
surf_ws/src/surf_gazebo_world/: CMakeLists.txt  README.md  package.xml
surf_ws/src/surf_gazebo_world/config/: no_side_bar.config
surf_ws/src/surf_gazebo_world/launch/: world.launch.py
surf_ws/src/surf_gazebo_world/models/surf_bench/: model.config  model.sdf
surf_ws/src/surf_gazebo_world/models/surf_boulder/: model.config  model.sdf
surf_ws/src/surf_gazebo_world/models/surf_deciduous_tree/: model.config  model.sdf
surf_ws/src/surf_gazebo_world/models/surf_historic_laboratory/: model.config  model.sdf
surf_ws/src/surf_gazebo_world/models/surf_lamp_post/: model.config  model.sdf
surf_ws/src/surf_gazebo_world/models/surf_multi_trunk_tree/: model.config  model.sdf
surf_ws/src/surf_gazebo_world/models/surf_shrub/: model.config  model.sdf
surf_ws/src/surf_gazebo_world/models/surf_throop_garden/: model.config  model.sdf
surf_ws/src/surf_gazebo_world/worlds/: surf_world.sdf
surf_ws/src/surf_humanoid/: CMakeLists.txt  package.xml
surf_ws/src/surf_humanoid/config/: humanoid.yaml
surf_ws/src/surf_humanoid/include/surf_humanoid/: voxel_codec.hpp
surf_ws/src/surf_humanoid/src/: drone_data_receiver.cpp  voxel_codec.cpp
surf_ws/src/surf_multirobot_comms/: CMakeLists.txt  package.xml
surf_ws/src/surf_multirobot_comms/include/surf_multirobot_comms/: qos_profiles.hpp  voxel_codec.hpp
surf_ws/src/surf_multirobot_comms/src/: voxel_codec.cpp
surf_ws/src/surf_multirobot_comms/test/: test_voxel_codec.cpp
surf_ws/src/surf_multirobot_msgs/: CMakeLists.txt  package.xml
surf_ws/src/surf_multirobot_msgs/msg/: CompressedVoxelDelta.msg  DeliveryMetrics.msg  LinkMetrics.msg  PipelineMetrics.msg  VoxelDelta.msg
surf_ws/src/surf_multirobot_sim/: CMakeLists.txt  README.md  package.xml
surf_ws/src/surf_multirobot_sim/config/: bonxai.yaml  bridge.yaml  communication.yaml  fast_lio_sim.yaml  two_robots.rviz
surf_ws/src/surf_multirobot_sim/config/link_traces/: halow_example.csv  wifi_example.csv
surf_ws/src/surf_multirobot_sim/include/surf_multirobot_sim/: adaptive_mode.hpp  voxel_codec.hpp
surf_ws/src/surf_multirobot_sim/launch/: two_robots.launch.py
surf_ws/src/surf_multirobot_sim/maps/: static_map.bonxai  static_map.bonxai.yaml
surf_ws/src/surf_multirobot_sim/models/diffbot/: model.sdf  model.urdf
surf_ws/src/surf_multirobot_sim/models/six_dof_robot/: model.sdf  model.urdf
surf_ws/src/surf_multirobot_sim/scripts/: prepare_link_trace.py  six_dof_teleop.py
surf_ws/src/surf_multirobot_sim/src/: adaptive_mode.cpp  link_emulator.cpp  map_odom_localizer.cpp  odometry_to_tf.cpp  shared_cloud_mux.cpp  voxel_codec.cpp  voxel_delta_receiver.cpp  voxel_delta_sender.cpp
surf_ws/src/surf_multirobot_sim/test/: test_communication_core.cpp
surf_ws/src/surf_multirobot_sim/worlds/: outdoor.sdf
