<?xml version="1.0"?>
<package format="3">
  <name>surf_data_tracker</name>
  <version>0.1.0</version>
  <description>Central, low-overhead experiment telemetry and attribution for SURF.</description>
  <maintainer email="raymond@todo.invalid">Raymond</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>surf_multirobot_msgs</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
