<?xml version="1.0"?>
<package format="3">
  <name>surf_drone</name>
  <version>0.1.0</version>
  <description>Drone-side LiDAR filtering, voxel selection, and compression for SURF.</description>
  <maintainer email="raymond@todo.invalid">Raymond</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>surf_multirobot_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>zstd_vendor</depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
