<?xml version="1.0"?>
<package format="3">
  <name>surf_multirobot_comms</name>
  <version>0.1.0</version>
  <description>Shared communication protocol, compression, and QoS profiles for SURF robots.</description>
  <maintainer email="raymond@todo.invalid">Raymond</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>surf_multirobot_msgs</depend>
  <depend>zstd_vendor</depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
