<?xml version="1.0"?>
<package format="3">
  <name>surf_multirobot_msgs</name>
  <version>0.1.0</version>
  <description>Communication and mapping messages for the SURF multi-robot stack.</description>
  <maintainer email="raymond@todo.invalid">Raymond</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
